# medical-ontology-retrieval

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DATA_NOTICE.md  Dockerfile  IMPLEMENTATION_BOUNDARY.md  LICENSE  Makefile  README.md  docker-compose-gpu.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS.template  pull_request_template.md
artifacts/: README.md
config/: README.md  colab.yaml  default.yaml  docker.yaml  local.example.yaml  test.yaml
data/: README.md
docs/: 00_documentation_index.md  01_project_workflow.md  02_environment_and_tooling.md  03_github_workflow.md  04_jira_scrum_workflow.md  05_roles_tasks_deadlines.md  06_data_workflow_and_sources.md  07_model_workflow.md  08_pipeline_workflow.md  09_testing_and_qa.md  10_colab_ollama_streamlit.md  11_docker_devcontainer.md  12_reporting_slides_video.md  13_api_spec.md  14_coding_standards.md  15_vscode_workspace_standard.md  16_branch_commit_playbook.md  17_definition_of_done.md  18_risk_fallback_plan.md  19_repository_structure.md  20_source_and_citation_policy.md  21_release_submission_checklist.md  22_onboarding_checklist.md  23_troubleshooting.md  24_empty_implementation_manifest.md  25_implementation_handoff.md  Bài 2 - Viettel AI Race 2026.md  bảng phân công task.txt
experiments/: README.md  error_analysis_template.md
logs/: README.md
notebooks/: README.md
references/: algorithms.md  data_sources.md  reading_list.md  report_references.bib  source_registry.jsonl  source_registry.md  tooling.md
schemas/: alias.schema.json  entity.schema.json  ground_truth.schema.json  output.schema.json
scripts/: bootstrap.ps1  bootstrap.sh  check_environment.py  pre_pr.py  run_fast_tests.py  validate_repository.py
slides/: README.md  outline.md
src/: build_vectordatabases.py  pipeline.py
tests/: conftest.py  test_formatter_validator.py
videos/: README.md  demo_checklist.md  (+1 more)
(+76 files in other folders)
