[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-ontology-retrieval"
version = "0.1.0"
description = "Vietnamese clinical entity extraction and ICD-10/RxNorm retrieval research project."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { file = "LICENSE" }
authors = [
  { name = "Medical Ontology Retrieval Team" }
]
dependencies = [
  "numpy==2.5.1",
  "PyYAML==6.0.3",
  "requests==2.34.2",
  "streamlit==1.59.1",
  "tqdm==4.68.4"
]

[project.optional-dependencies]
dev = [
  "pre-commit==4.6.0",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "ruff==0.15.21"
]

[project.scripts]
medical-ontology = "medical_ontology.infer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests", "scripts"]
exclude = [
  "artifacts",
  "data/raw",
  "logs",
  "output",
  "reports/latex"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "D", "N", "C4", "RUF"]
ignore = [
  "D100",
  "D104",
  "D107",
  "D203",
  "D213"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"scripts/*.py" = ["D"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "integration: tests multiple modules together without external models",
  "e2e: runs the end-to-end inference workflow",
  "ollama: requires a running Ollama server and downloaded models",
  "slow: takes longer than the normal fast test suite"
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:streamlit.*"
]

[tool.coverage.run]
branch = true
source = ["medical_ontology"]

[tool.coverage.report]
show_missing = true
skip_covered = true
